syntax = "proto3";

package manga;
option go_package = "vih/backend/proto";

service MangaService {
  rpc GetMangaList(MangaListRequest) returns (MangaListResponse) {}
  rpc GetMangaDetail(MangaDetailRequest) returns (MangaDetailResponse) {}
  rpc GetChapterList(ChapterListRequest) returns (ChapterListResponse) {}
  rpc GetChapterContent(ChapterContentRequest) returns (ChapterContentResponse) {}
  rpc UpdateViewCount(UpdateViewCountRequest) returns (UpdateViewCountResponse) {}
}

message Manga {
  string id = 1;
  string title = 2;
  string description = 3;
  string cover_url = 4;
  repeated string genres = 5;
  string status = 6;
  string author = 7;
  int64 view_count = 8;
  int64 created_at = 9;
  int64 updated_at = 10;
}

message Chapter {
  string id = 1;
  string manga_id = 2;
  string title = 3;
  float chapter_number = 4;
  int64 created_at = 5;
  int64 view_count = 6;
}

message ChapterContent {
  string id = 1;
  string chapter_id = 2;
  repeated string image_urls = 3;
}

message MangaListRequest {
  int32 page = 1;
  int32 page_size = 2;
  string genre = 3;
  string sort_by = 4;
}

message MangaListResponse {
  repeated Manga mangas = 1;
  int32 total = 2;
}

message MangaDetailRequest {
  string manga_id = 1;
}

message MangaDetailResponse {
  Manga manga = 1;
}

message ChapterListRequest {
  string manga_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ChapterListResponse {
  repeated Chapter chapters = 1;
  int32 total = 2;
}

message ChapterContentRequest {
  string chapter_id = 1;
}

message ChapterContentResponse {
  ChapterContent content = 1;
}

message UpdateViewCountRequest {
  string manga_id = 1;
  string chapter_id = 2;
}

message UpdateViewCountResponse {
  int64 new_count = 1;
}
